--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@ borders: top right bottom left !important; border-color: #404040 !important; bor
             <h5  class="u-align-left u-text u-text-1">O que nós fazemos</h5>
             <h2  style="color: rgb(90, 3, 90);;" class="u-align-left u-text u-text-2">Projetado para cada tipo de viajante</h2>
             <a id="meuBotao9" style="background-color: rgb(90, 3, 90); border-color: rgb(90, 3, 90); color: white;"
-            class=" u-border-hover-palette-1-base  u-btn u-btn-round u-button-style  u-radius-50 u-text-active-palette-1-base u-text-body-alt-color u-text-hover-white u-btn-2" target="_blank" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">Solicitar Categorias</a>
+            class=" u-border-hover-palette-1-base  u-btn u-btn-round u-button-style  u-radius-50 u-text-active-palette-1-base u-text-body-alt-color u-text-hover-white u-btn-2" target="_blank" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">Solicitar Orçamento</a>
           </div>
         </div>
       </div>
