--- a/index.html
+++ b/index.html
@@ -29,20 +29,40 @@
     border-color: rgb(90, 3, 90);
     color: white;
 }
+.logo-container {
+    display: inline-block;
+    text-decoration: none;
+    max-width: 200px; /* Defina um tamanho máximo para a logo */
+    width: 100%; /* Permite que a logo se ajuste ao tamanho do container */
+    height: auto; /* Mantém a proporção da imagem */
+}
+
+.logo {
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center; /* Centraliza a imagem horizontalmente */
+}
+
+.logo img {
+    max-width: 100%; /* Garante que a imagem não ultrapasse o container */
+    height: auto; /* Mantém a proporção da imagem */
+    display: block; /* Remove espaços em branco desnecessários */
+    border-radius: 15%;
+}
+
+/* Media query para telas menores (abaixo de 600px) */
+@media (max-width: 600px) {
+    .logo-container {
+        max-width: 150px; /* Reduz o tamanho da logo em telas menores */
+    }
+}
 </style>
   </head>
   <body data-path-to-root="/" data-include-products="false" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-sticky u-header" id="sec-be42"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
     <a href="#" class="logo-container">
       <div class="logo">
-          <div class="logo-circle">
-              <div class="logo-inner-circle">
-                  <div class="logo-plane"></div>
-              </div>
-              <div class="logo-wave"></div>
-          </div>
-          <div class="logo-text">
-              FORT <span class="logo-text-go"> TRAVEL</span>
-          </div>
+        <img src="images/logo.jpeg" alt="">
       </div>
   </a>
         <nav class="u-menu u-menu-hamburger u-offcanvas u-menu-1" data-responsive-from="XL">
@@ -415,7 +435,7 @@ borders: top right bottom left !important; border-color: #404040 !important; bor
             <h5  class="u-align-left u-text u-text-1">O que nós fazemos</h5>
             <h2  style="color: rgb(90, 3, 90);;" class="u-align-left u-text u-text-2">Projetado para cada tipo de viajante</h2>
             <a id="meuBotao9" style="background-color: rgb(90, 3, 90); border-color: rgb(90, 3, 90); color: white;"
-            class=" u-border-hover-palette-1-base  u-btn u-btn-round u-button-style  u-radius-50 u-text-active-palette-1-base u-text-body-alt-color u-text-hover-white u-btn-2" target="_blank" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">Solicitar Orçamento</a>
+            class=" u-border-hover-palette-1-base  u-btn u-btn-round u-button-style  u-radius-50 u-text-active-palette-1-base u-text-body-alt-color u-text-hover-white u-btn-2" target="_blank" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">Solicitar Categorias</a>
           </div>
         </div>
       </div>
