--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@ borders: top right bottom left !important; border-color: #404040 !important; bor
             <h5  class="u-align-left u-text u-text-1">O que nós fazemos</h5>
             <h2  style="color: rgb(119, 69, 168);;" class="u-align-left u-text u-text-2">Projetado para cada tipo de viajante</h2>
             <a id="meuBotao9" style="background-color: rgb(119, 69, 168); border-color: rgb(119, 69, 168); color: white;"
-            class=" u-border-hover-palette-1-base  u-btn u-btn-round u-button-style  u-radius-50 u-text-active-palette-1-base u-text-body-alt-color u-text-hover-white u-btn-2" target="_blank" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">Solicitar Categorias</a>
+            class=" u-border-hover-palette-1-base  u-btn u-btn-round u-button-style  u-radius-50 u-text-active-palette-1-base u-text-body-alt-color u-text-hover-white u-btn-2" target="_blank" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">Solicitar Orçamento</a>
           </div>
         </div>
       </div>
@@ -500,7 +500,7 @@ borders: top right bottom left !important; border-color: #404040 !important; bor
               <p>Sua agência de viagens para destinos incríveis.</p>
               <div class="redes-sociais">
                   <a href="#" class="icone-rede-social"><i class="fab fa-facebook-f"></i></a>
-                  <a href="https://www.instagram.com/fort.travel/" target="_blank" class="icone-rede-social"><i class="fab fa-instagram"></i></a>
+                  <a href="https://www.instagram.com/fort.travel.go/" target="_blank" class="icone-rede-social"><i class="fab fa-instagram"></i></a>
                   <a href="#" class="icone-rede-social"><i class="fab fa-twitter"></i></a>
               </div>
           </div>
@@ -522,14 +522,7 @@ borders: top right bottom left !important; border-color: #404040 !important; bor
               <p>Endereço: Rua L024 QD16 LT20 <br>
                 Numero: 123 - Anápolis, GO</p>
           </div>
-          <div class="footer-coluna">
-              <h3>Newsletter</h3>
-              <p>Receba ofertas exclusivas e novidades!</p>
-              <form class="newsletter-form">
-                  <input type="email" placeholder="Seu email" class="newsletter-input">
-                  <button type="submit" class="newsletter-botao">Inscrever</button>
-                </form>
-          </div>
+
 
       </div>
       <div class="footer-copyright">
